# mygame

./: .gitignore  CMakeLists.txt  Math.h  actor.cpp  actor.h  component.cpp  component.h  frag.glsl  main.cpp  math.cpp  math.h  model.cpp  model.h  myGL.cpp  myGL.h  renderer.cpp  renderer.h  texture.cpp  texture.h  tgaimage.h  vert.glsl
opengl/: basic.cpp  basic.h  draw.cpp  draw.h  init.cpp  init.h  vertexArray.h
shader/: frag.glsl  vert.glsl
tool/: Math.cpp  Math.h  tgaimage.h
